--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,9 @@
   "rules": {
     "arrow-parens": 1,
     "generator-star-spacing": 1,
-    "no-debugger": 1
+    "no-debugger": 1,
+    "vue/html-indent": [1, 4],
+    "indent": [1, 4],
+    "vue/name-property-casing": ["error", "kebab-case"]
   }
 }
