--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@vue/babel-preset-app": "^3.1.1",
     "autoprefixer": "^9.3.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
@@ -49,6 +50,7 @@
     "url-loader": "^1.1.2",
     "vue-eslint-parser": "^3.2.2",
     "vue-loader": "^15.4.2",
+    "vue-style-px2rem-loader": "^0.1.0",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
@@ -58,7 +60,26 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "echarts": "^4.2.0-rc.2",
+    "epic-spinners": "^1.0.4",
+    "fastclick": "^1.0.6",
+    "leancloud-realtime": "^4.2.0",
+    "leancloud-realtime-plugin-typed-messages": "^3.0.1",
+    "leancloud-storage": "^3.11.0",
     "lodash": "^4.17.11",
-    "vue": "^2.5.17"
+    "moment": "^2.22.2",
+    "numeral": "^2.0.6",
+    "nzh": "^1.0.3",
+    "px2rem": "^0.5.0",
+    "query-string": "^6.2.0",
+    "validator": "^10.9.0",
+    "vue": "^2.5.17",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-rate": "^2.2.0",
+    "vue-router": "^3.0.1",
+    "vue-scroller": "^2.2.4",
+    "vue-touch": "^1.1.0",
+    "vue2-toast": "^2.0.2",
+    "vuex": "^3.0.1"
   }
 }
